Revert "Dark Mode: Network display fix (#14159)"
This reverts commit 1b9243cd7e7ea89b52671ca1d8707688764ed47d.

--- a/ui/components/app/network-display/index.scss
+++ b/ui/components/app/network-display/index.scss
@@ -11,6 +11,34 @@
     cursor: not-allowed;
   }
 
+  &--colored {
+    background-color: lighten(rgb(125, 128, 130), 45%);
+  }
+
+  &--mainnet {
+    background-color: lighten($blue-lagoon, 68%);
+  }
+
+  &--ropsten {
+    background-color: lighten($crimson, 45%);
+  }
+
+  &--kovan {
+    background-color: lighten($purple, 65%);
+  }
+
+  &--rinkeby {
+    background-color: lighten($tulip-tree, 35%);
+  }
+
+  &--goerli {
+    background-color: lighten($dodger-blue, 35%);
+  }
+
+  &--localhost {
+    background-color: lighten($blue-lagoon, 68%);
+  }
+
   &.chip {
     margin: 0;
     max-width: 100%;
