--- a/ui/components/app/signature-request/index.scss
+++ b/ui/components/app/signature-request/index.scss
@@ -17,6 +17,7 @@
   flex: 1;
 
   .network-display {
+    padding: 0;
     justify-content: flex-end;
     margin-left: auto;
   }
