--- a/ui/css/design-system/deprecated-colors.scss
+++ b/ui/css/design-system/deprecated-colors.scss
@@ -9,4 +9,10 @@ $malibu-blue: #7ac9fd;
 $alto: #dedede;
 $black: #000;
 $white: #fff;
+$blue-lagoon: #038789;
+$crimson: #e91550;
+$purple: #690496;
+$tulip-tree: #ebb33f;
+$dodger-blue: #3099f2;
 $monzo: #d0021b;
+$dusty-gray: #9b9b9b;
